--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,45 @@
     <string name="txt_activate_not">Activate Now</string>
     <string name="enable_accessibility">Enable accessibility on the next screen for TheShore to function smoothly</string>
 
-    <string name="dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry.</string>
+    <string name="large_dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry.</string>
+    <string name="small_dummy_text">Lorem Ipsum</string>
 
     <string name="whatsapp_package_name">com.whatsapp</string>
+
+
+    <string-array name="array_navigation_labels">
+        <item>@string/home</item>
+        <item>@string/bookmark</item>
+        <item>@string/settings</item>
+        <item>@string/help_support</item>
+        <item>@string/about_us</item>
+        <item>@string/privacy_policy</item>
+    </string-array>
+
+    <string-array name="array_navigation_titles">
+        <item>@null</item>
+        <item>@string/bookmark</item>
+        <item>@string/settings</item>
+        <item>@string/help_support</item>
+        <item>@string/about_us</item>
+        <item>@string/privacy_policy</item>
+    </string-array>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="openDrawer">open_drawer</string>
+    <string name="closeDrawer">close_drawer</string>
+
+    <!--    Nav items-->
+    <string name="home">Home</string>
+    <string name="bookmark">Bookmarks</string>
+    <string name="settings">Settings</string>
+    <string name="help_support">Help &amp; Support</string>
+    <string name="about_us">About Us</string>
+    <string name="privacy_policy">Privacy Policy</string>
+
+
+    <string name="txt_no_data">No Data Found!</string>
+
 
 </resources>
