Flow connectivity of API calling in accessibility service
- Implement API calling in accessibility service
- Implement local database validation in accessibility service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,8 @@
     <string name="key_allow_battery_optimization">key_allow_battery_optimization</string>
     <string name="check_it_with_shore">Check it with Shore</string>
 
+
+    <string name="something_went_wrong">Something went wrong!</string>
+    <string name="exception_message_no_connection">Internet connection error</string>
+
 </resources>
