--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,12 @@
     <string name="permission_title_draw_overlays">Allow Shore Media to draw overlays permission?</string>
     <string name="permission_message_draw_overlays">You have to enable the draw overlays permission for this app to work.</string>
 
+
+    <string name="permission_title_storage">Allow Shore Media to access storage?</string>
+    <string name="permission_message_storage">We need storage permission to store article screenshot locally.</string>
+
+    <string name="err_permission_is_required">Permission is required</string>
+
     <string name="permission_title_accessibility">Allow Shore Media to use accessibility service?</string>
     <string name="permission_message_accessibility">We need accessibility permission to protect you from fake-news in real time.</string>
     <string name="permission_accessibility_description">Switch \'ON\' in the top right corner to save time as The Shore unlocks these cool features for you:\n- Real time Fake news detections on WhatsApp forwards\n- Share real story instead of fake forward\n\nNote:\nYou may receive a standard warning after this screen. Don\'t worry about it, The Shore will never collect your personal information. Contact info@nitinsworld.com for any concerns.</string>
