--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Shore</string>
 
-    <string name="a_layer_of_truth">A layer of truth on every forward.</string>
+    <string name="a_layer_of_truth">A layer of truth on every forward</string>
 
     <string name="extra_large_dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry. \n\nWhat is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry. \nWhat is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry. \n\nWhat is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry.</string>
     <string name="large_dummy_text">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry.</string>
@@ -61,28 +61,30 @@
     <string name="no_thanks_take_me_to_app">No Thanks! Take me to the app</string>
 
     <!--    Permission utils-->
-    <string name="permission_title_draw_overlays">Allow Shore Media to draw overlays permission?</string>
+    <string name="permission_title_draw_overlays">Allow Shore to draw over other apps?</string>
     <string name="permission_message_draw_overlays">You have to enable the draw overlays permission for this app to work.</string>
 
 
-    <string name="permission_title_storage">Allow Shore Media to access storage?</string>
-    <string name="permission_message_storage">We need storage permission to store article screenshot locally.</string>
+    <string name="permission_title_storage">Allow Shore to access storage?</string>
+    <string name="permission_message_storage">We need storage permission to store articles screenshot locally.</string>
+    <string name="permission_storage_error">Please allow storage permission first to share it</string>
 
     <string name="err_permission_is_required">Permission is required</string>
 
-    <string name="permission_title_accessibility">Allow Shore Media to use accessibility service?</string>
+    <string name="permission_title_accessibility">Allow Shore to use accessibility service?</string>
     <string name="permission_message_accessibility">We need accessibility permission to protect you from fake-news in real time.</string>
-    <string name="permission_accessibility_description">Switch \'ON\' in the top right corner to save time as The Shore unlocks these cool features for you:\n- Real time Fake news detections on WhatsApp forwards\n- Share real story instead of fake forward\n\nNote:\nYou may receive a standard warning after this screen. Don\'t worry about it, The Shore will never collect your personal information. Contact info@nitinsworld.com for any concerns.</string>
+    <string name="permission_accessibility_description">Switch \'ON\' in the top right corner to save time as the Shore unlocks these cool features for you:\n- Real time Fake news detections on WhatsApp forwards\n- Share actual story instead of internet fiction\n\nNote:\nYou may receive a standard warning after this screen. Don\'t worry about it, The Shore will never collect your personal information. Contact info@theshoremedia.com for any concerns.</string>
 
-    <string name="help_look_for_shore_in_the_list_and_click">Look for \'TheShore\' is the list and click</string>
-    <string name="help_see_how_shore_works_on_whatsapp">See how \'TheShore\' works on WhatsApp.</string>
+    <string name="help_look_for_shore_in_the_list_and_click">Look for \'Shore\' is the list and click</string>
+    <!--    TODO:connectivity in next release -->
+    <string name="help_see_how_shore_works_on_whatsapp">See how \'Shore\' works on WhatsApp.</string>
 
     <string name="err_work_is_under_process">Work is under-process!</string>
 
-    <string name="the_shore_is_active">The Shore is Active</string>
+    <string name="the_shore_is_active">Shore protection is activated</string>
 
     <string name="share">Share</string>
-    <string name="mark_as_favourite">Mark as Favourite</string>
+    <string name="mark_as_favourite">Mark as favourite</string>
     <string name="delete">Delete</string>
 
     <string name="news_stories">News stories</string>
@@ -103,27 +105,27 @@
     <string name="lbl_less">Less</string>
 
 
-    <string name="lbl_intro_1">Tired of\n<b>fake forwards</b></string>
-    <string name="des_intro_1">Shore will allows you to discover the facts in real time with no-extra efforts.</string>
+    <string name="lbl_intro_1">Tired of\n<b>fake forwards?</b></string>
+    <string name="des_intro_1">Shore will allows you to discover the facts in real-time with no-extra efforts.</string>
     <string name="btn_get_started">Get Started</string>
     <string name="skip">Skip</string>
     <string name="lbl_intro_2">Read\n<b>Facts, Not Fakes </b></string>
-    <string name="des_intro_2">Shore will allows you to discover the facts in real time with no-extra efforts.</string>
+    <string name="des_intro_2">Wrong information results as weak arguments in debates, Read facts and put better arguments</string>
     <string name="lbl_intro_3">Share\n<b>Facts, Not Fakes </b></string>
-    <string name="des_intro_3">Shore will allows you to discover the facts in real time with no-extra efforts.</string>
+    <string name="des_intro_3">Don\'t blindly trust on your friend. Who knows he has done it on someone else.</string>
     <string name="lbl_intro_4">We respect\n<b>of your privacy</b></string>
-    <string name="des_intro_4">Shore will allows you to discover the facts in real time with no-extra efforts.</string>
+    <string name="des_intro_4">We don\'t collect your personal information. We serve to make a better future for us.</string>
 
 
     <string name="fact_checks">Fact checks</string>
     <string name="sources">Sources</string>
 
     <string name="lbl_investigate_a_claim">Investigate a claim</string>
-    <string name="des_manual_investigation">To investigate a claim, either type and paste your chosen claim into the box below and click Investigate.\n\nThis can be entered in any language.</string>
+    <string name="des_manual_investigation">To investigate a claim, either type or paste your chosen claim into the box below and click Investigate.\n\nThis can be entered in any language.</string>
     <string name="hint_enter_your_claim">Enter your claim</string>
     <string name="investigate">Investigate</string>
-    <string name="error_whatsapp_real_time_fake_news_detection_is_not_activated_now">WhatsApp real time fake news detection is not activated now.</string>
-    <string name="success_whatsapp_real_time_fake_news_detection_is_activated_now">You are protected from fake news, As Shore WhatsApp real time fake news detection is activated.</string>
+    <string name="error_whatsapp_real_time_fake_news_detection_is_not_activated_now">WhatsApp real-time fake news detection is not activated.</string>
+    <string name="success_whatsapp_real_time_fake_news_detection_is_activated_now">You are protected from fake news, Shore WhatsApp real-time fake news detection is activated.</string>
     <string name="btn_activate">Activate</string>
 
     <string name="add_custom_source">Add custom source</string>
@@ -138,6 +140,7 @@
     <string name="i_love_it">I\'m loving it!</string>
     <string name="dont_like_the_app">Don\'t like the app? Let us know</string>
     <string name="key_view_name">view_name</string>
+    <string name="key_model">model</string>
     <string name="msg_source_successfully_added_as_verification_source">%1$s successfully added as source of verification.</string>
 
     <string name="err_empty_claim">Please enter claim to investigate</string>
@@ -152,4 +155,14 @@
 
     <string name="support_mail_subject">Shore suggestions from User</string>
     <string name="support_mail_text">Thanks for using Shore, We are working on expanding this project and would appreciate your input as a valued user of the items being worked on.\nPlease specify what you did not like about Shore:\n</string>
+
+    <string name="url_privacy_policy">https://theshoremedia.com/privacy-policy</string>
+    <string name="url_about_us">https://theshoremedia.com/about-us</string>
+    <string name="url_help">https://theshoremedia.com/support</string>
+    <string name="url_terms_conditions">https://theshoremedia.com/toc</string>
+
+    <string name="read_complete_article_at_and_download_shore_to_detect_fake_news_in_real_time">Read complete story at: %1s\n\nDownload Shore to detect fake-news in real-time on WhatsApp:\nhttps://play.google.com/store/apps/details?id=com.theshoremedia</string>
+
+    <string name="restart">Restart</string>
+    <string name="update_downloaded">Update downloaded</string>
 </resources>
